# focusify

./: .gitignore  Cargo.toml  README.md  package-lock.json
backend/: Cargo.toml  lib.rs  main.rs
backend/models/: timer.rs
backend/services/: pomodoro.rs
src/: main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/ui/: package-lock.json  package.json  vite.config.ts
src-tauri/ui/src/: App.tsx
src-tauri/ui/src/components/: pomodoro.css  pomodoro.tsx
src/models/: timer.rs
src/services/: pomodoro.rs
